website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/guides/creating-pages.mdx
---
slug: /creating-pages
sidebar_label: Pages
---

# 建立頁面

在本節中，我們將學習如何在 Docusaurus 中建立頁面。

`@docusaurus/plugin-content-pages` 插件讓您能夠建立**獨立的一次性頁面**，例如展示頁面、遊樂場頁面或支援頁面。您可以使用 React 元件或 Markdown。

:::note

頁面沒有側邊欄，只有[文件](./docs/docs-introduction.mdx)才有。

:::

:::info

查看[頁面插件 API 參考文件](./../api/plugins/plugin-content-pages.mdx)以獲取完整的選項列表。

:::

## 新增 React 頁面 {#add-a-react-page}

React 被用作建立頁面的 UI 庫。每個頁面元件都應該導出一個 React 元件，您可以利用 React 的表現力來建立豐富且互動的內容。

建立檔案 `/src/pages/helloReact.js`：

```jsx title="/src/pages/helloReact.js"
import React from 'react';
import Layout from '@theme/Layout';

export default function Hello() {
  return (
    <Layout title="Hello" description="Hello React Page">
      <div
        style={{
          display: 'flex',
          justifyContent: 'center',
          alignItems: 'center',
          height: '50vh',
          fontSize: '20px',
        }}>
        <p>
          Edit <code>pages/helloReact.js</code> and save to reload.
        </p>
      </div>
    </Layout>
  );
}
```

儲存檔案後，開發伺服器將自動重新載入變更。現在開啟 [`http://localhost:3000/helloReact`](http://localhost:3000/helloReact)，您將看到剛剛建立的新頁面。

每個頁面沒有任何預設樣式。如果您希望導覽列和/或頁尾出現，您需要從 `@theme/Layout` 導入 `Layout` 元件，並將您的內容包裹在該元件中。

:::tip

您也可以使用 `.tsx` 副檔名建立 TypeScript 頁面（`helloReact.tsx`）。

:::

## 新增 Markdown 頁面 {#add-a-markdown-page}

建立檔案 `/src/pages/helloMarkdown.md`：

```md title="/src/pages/helloMarkdown.md"
---
title: my hello page title
description: my hello page description
hide_table_of_contents: true
---

# Hello

How are you?
```

同樣地，頁面將建立在 [`http://localhost:3000/helloMarkdown`](http://localhost:3000/helloMarkdown)。

Markdown 頁面比 React 頁面靈活性較低，因為它總是使用主題佈局。

這裡有一個[Markdown 頁面範例](/examples/markdownPageExample)。

:::tip

您也可以在 Markdown 頁面中使用 React 的全部功能，請參考 [MDX](https://mdxjs.com/) 文件。

:::

## 路由 {#routing}

如果您熟悉其他靜態網站生成器如 Jekyll 和 Next，這種路由方法會讓您感到熟悉。您在 `/src/pages/` 目錄下建立的任何 JavaScript 檔案都會自動轉換為網站頁面，遵循 `/src/pages/` 目錄層次結構。例如：

- `/src/pages/index.js` → `[baseUrl]`
- `/src/pages/foo.js` → `[baseUrl]/foo`
- `/src/pages/foo/test.js` → `[baseUrl]/foo/test`
- `/src/pages/foo/index.js` → `[baseUrl]/foo/`

在這個基於元件的開發時代，鼓勵您將樣式、標記和行為一起放在元件中。每個頁面都是一個元件，如果您需要用自己的樣式自訂頁面設計，我們建議將樣式與頁面元件放在同一個目錄中。例如，要建立一個「支援」頁面，您可以執行以下操作之一：

- 新增一個 `/src/pages/support.js` 檔案
- 建立一個 `/src/pages/support/` 目錄和一個 `/src/pages/support/index.js` 檔案。

後者更受推薦，因為它有讓您將與頁面相關的檔案放在該目錄中的好處。例如，一個 CSS 模組檔案（`styles.module.css`），其中包含僅用於「支援」頁面的樣式。

:::note

這只是一個推薦的目錄結構，您仍然需要手動在元件模組（`support/index.js`）中導入 CSS 模組檔案。

:::

預設情況下，任何以 `_` 開頭的 Markdown 或 JavaScript 檔案都會被忽略，且不會為該檔案建立路由（請參閱 `exclude` 選項）。

```bash
my-website
├── src
│   └── pages
│       ├── styles.module.css
│       ├── index.js
│       ├── _ignored.js
│       ├── _ignored-folder
│       │   ├── Component1.js
│       │   └── Component2.js
│       └── support
│           ├── index.js
│           └── styles.module.css
.
```

:::warning

`src/pages/` 目錄內的所有 JavaScript/TypeScript 檔案都會自動生成對應的網站路徑。若需在該目錄建立可重複使用的元件，請使用 `exclude` 選項（預設情況下，以 `_` 為前綴的檔案、測試檔案(`.test.js`) 及 `__tests__` 目錄中的檔案不會被轉換為頁面）。

:::

### 重複路由 {#duplicate-routes}

您可能會意外建立多個應透過相同路由存取的頁面。發生此情況時，Docusaurus 在執行 `yarn start` 或 `yarn build` 時會警告重複路由，但網站仍會成功建置。最後建立的頁面將可存取，但會覆蓋其他衝突頁面。若要解決此問題，您應修改或移除任何衝突的路由。